# tvm-cli

./: Cargo.toml  README.md  build.rs
.github/workflow/: prerelease.yaml
.github/workflows/: prerelease.yaml
src/: account.rs  call.rs  compile.rs  completion.rs  config.rs  convert.rs  crypto.rs  debug.rs  decode.rs  deploy.rs  depool.rs  genaddr.rs  getconfig.rs  helpers.rs  main.rs  message.rs  multisig.rs  replay.rs  run.rs  sendfile.rs  test.rs
src/debot/: callbacks.rs  mod.rs  processor.rs  term_browser.rs  term_encryption_box.rs  term_signing_box.rs
src/debot/interfaces/: address_input.rs  amount_input.rs  confirm_input.rs  dinterface.rs  echo.rs  encryption_box_input.rs  input_interface.rs  menu.rs  number_input.rs  signing_box_input.rs  stdout.rs  terminal.rs  userinfo.rs
tests/: browser.rs  test_cli.rs
tests/common/: mod.rs
