[package]
description = "command line tool for TVM compatible blockchains"
documentation = "https://www.tvmlabs.io"
edition = "2021"
homepage = "https://www.tvmlabs.io"
keywords = [
    #
    "TON",
    "SDK",
    "smart contract",
    "tvmlabs",
    "solidity",
]
name = "tvm-cli"
readme = "README.md"
repository = "https://github.com/tvmlabs/tvm-cli"
version = "0.38.0"

[features]
sold = ["dep:sold"]

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.42"
base64 = "0.13"
chrono = "0.4"
clap = "2.32"
futures = "0.3"
hex = "0.4"
indicatif = "0.16"
log = { features = ["std"], version = "0.4" }
num-bigint = "0.4"
num-traits = "0.2"
qr2term = "0.2"
regex = "1.5"
reqwest = "0.11"
serde = { features = ["derive"], version = "1.0" }
serde_derive = "1.0"
serde_json = "1.0"
simplelog = "0.8"
thiserror = "1.0.56"
tokio = { default-features = false, features = ["full"], version = "1.21" }
tokio-retry = "0.3"
url = "2.3.1"

sold = { git = "https://github.com/tvmlabs/tvm-solidity-compiler", tag = "0.73.0", optional = true }
tvm_abi = { git = "https://github.com/tvmlabs/tvm-abi", tag = "3.0.0" }
tvm_block = { git = "https://github.com/tvmlabs/tvm-block", tag = "2.0.0" }
tvm_block_json = { git = "https://github.com/tvmlabs/tvm-block-json", tag = "0.8.0" }
# tvm_client = { git = "https://github.com/tvmlabs/tvm-sdk", branch = "feature/masterchain-free" }
tvm_client = { git = "https://github.com/tvmlabs/tvm-sdk", branch = "rc-1.46.0" }
tvm_executor = { git = "https://github.com/tvmlabs/tvm-executor", tag = "2.0.0" }
tvm_assembler = { git = "https://github.com/tvmlabs/tvm-assembler", tag = "2.0.0" }
# tvm_sdk = { git = "https://github.com/tvmlabs/tvm-sdk", branch = "feature/masterchain-free" }
tvm_sdk = { git = "https://github.com/tvmlabs/tvm-sdk", branch = "rc-1.46.0" }
tvm_types = { git = "https://github.com/tvmlabs/tvm-types", tag = "3.0.1" }
tvm_vm = { git = "https://github.com/tvmlabs/tvm-vm", tag = "2.0.0" }

[dev-dependencies]
assert_cmd = "2.0"
lazy_static = "1.4"
predicates = "2.1"
string-error = "0.1.0"

[[bin]]
name = "tonos-cli"
path = "src/main.rs"

[[bin]]
name = "__tonos-cli_completion"
path = "src/completion.rs"
