[package]
description = "command line tool for TVM compatible blockchains"
documentation = "https://www.tvmlabs.io"
edition = "2021"
homepage = "https://www.tvmlabs.io"
keywords = [
    #
    "TON",
    "SDK",
    "smart contract",
    "tvmlabs",
    "solidity",
]
name = "tvm-cli"
readme = "README.md"
repository = "https://github.com/tvmlabs/tvm-cli"
version = "0.39.0"

[profile.profiling]
debug = 1
inherits = 'release'

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"
# Enable only a small amount of optimization in debug mode
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.


[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
base64 = "0.21.7"
chrono = "0.4.33"
clap = "2"
futures = "0.3.30"
hex = "0.4.3"
indicatif = "0.17.7"
log = { features = ["std"], version = "0.4.20" }
num-bigint = "0.4.4"
num-traits = "0.2.17"
qr2term = "0.3.1"
regex = "1.10.3"
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls-webpki-roots"] }
serde = { features = ["derive"], version = "1.0.196" }
serde_derive = "1.0.196"
serde_json = "1.0.113"
simplelog = "0.12.1"
thiserror = "1.0.56"
tokio = { default-features = false, features = ["full"], version = "1.36.0" }
tokio-retry = "0.3.0"
url = "2.5.0"

tvm_abi = { git = "https://github.com/tvmlabs/tvm-abi", tag = "3.0.0" }
tvm_assembler = { git = "https://github.com/tvmlabs/tvm-assembler", tag = "2.0.0" }
tvm_block = { git = "https://github.com/tvmlabs/tvm-block", tag = "2.0.0" }
tvm_block_json = { git = "https://github.com/tvmlabs/tvm-block-json", tag = "0.8.0" }
tvm_client = { git = "https://github.com/tvmlabs/tvm-sdk", branch = "rc-1.46.0", default-features = false, features = ["std", "rustls-tls-webpki-roots"] }
tvm_executor = { git = "https://github.com/tvmlabs/tvm-executor", tag = "2.0.0" }
tvm_sdk = { git = "https://github.com/tvmlabs/tvm-sdk", branch = "rc-1.46.0", default-features = false }
tvm_types = { git = "https://github.com/tvmlabs/tvm-types", tag = "3.0.1" }
tvm_vm = { git = "https://github.com/tvmlabs/tvm-vm", tag = "2.0.0" }

[dev-dependencies]
assert_cmd = "2.0.13"
lazy_static = "1.4.0"
predicates = "3.1.0"
string-error = "0.1.0"

[[bin]]
name = "tvm-cli"
path = "src/main.rs"

[[bin]]
name = "__tvm-cli_completion"
path = "src/completion.rs"
